testkube/testkube-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkube-api
  namespace: testkube
spec:
  type: LoadBalancer
  selector:
    app: testkube-api
  ports:
  - port: 8080
    targetPort: 8080
