testkube/testkube-service copy 2.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkube-api
  namespace: testkube
spec:
  selector:
    app: testkube-api
  ports:
  - port: 8080
    targetPort: 8080
