testkube/testkube-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: testkube
  namespace: testkube
spec:
  selector:
    app: testkube
  ports:
  - port: 80
    targetPort: 8080
    name: http
  - port: 8443
    targetPort: 8443
    name: https
