testkube/testkube-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: testkube-api
  namespace: testkube
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "5"
    spec:
      containers:
        - image: dev.local/testkube-api-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

# ---
# apiVersion: serving.knative.dev/v1
# kind: Service
# metadata:
#   name: testing-services
#   namespace: connectivity
#   # labels:
#   #   networking.knative.dev/visibility: cluster-local
# spec:
#   template:
#     metadata:
#       annotations:
#         autoscaling.knative.dev/min-scale: "0"
#         autoscaling.knative.dev/max-scale: "10"
#     spec:
#       containers:
#         - image: "dev.local/testing-services"
#           imagePullPolicy: Never
#           ports:
#             - containerPort: 8080
#           livenessProbe:
#             httpGet:
#               path: /live
#           readinessProbe:
#             httpGet:
#               path: /ready
#           env:
#             - name: APP_PORT
#               value: "8080"
#             - name: DEBUG
#               value: "true"
