testkube/testkube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testkube-ingress
  namespace: testkube
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: testkube
            port:
              number: 80
